--- a/http/chat/chat.css
+++ b/http/chat/chat.css
@@ -11,7 +11,7 @@
 	display: flex;
 	align-items: stretch;
 }
-#chat { flex-grow: 1 }
+#chat { flex: 1 1 0 }
 #changetypeStat:empty { color: rgba(0, 0, 0, 0) }
 #changetypeStat:not(:empty) {
 	transition: color 0.2s 0.2s;
