--- a/http/a/main.css
+++ b/http/a/main.css
@@ -1,10 +1,9 @@
-html { background: #fff }
+html { background: #000 }
 body {
 	font-family: helvetica, sans-serif;
 	-webkit-text-size-adjust: none;
 	tab-size: 4;
 	line-height: 1.2;
-	background: #000;
 }
 * {
 	box-sizing: border-box;
@@ -48,16 +47,16 @@ body {
 .nomar, body, input, .comment .hover *, fieldset, textarea, .error * { margin: 0 }
 .tumar, form *, .comment > blockquote:nth-child(2), .comment > pre:nth-child(2) { margin-top: 2px }
 .sumar:not(:first-child), :not(img) + .desc, .blk { margin-top: 4px }
-.umar:not(:first-child), :not(.row):not(.flex):not(.resp-flex) > section:not(:first-child), article:not(:first-child), form:not([action="/search/"]) { margin-top: 6px }
+.umar:not(:first-child), :not(.row):not(.flex):not(.resp-flex) > section:not(:first-child), article:not(:first-child), form:not([action="/search/"]), #footer, #sidebar { margin-top: 6px }
 .bumar:not(:first-child), h1:not(:first-child), fieldset:not(:first-of-type) { margin-top: 8px }
-.bmar, .error, .half, #content, aside.rit, #notifs li, #sidebar { margin-bottom: 6px }
+.bmar, .error, .half, aside.rit, #notifs li { margin-bottom: 6px }
 .lftpad, .user { margin-left: 6px }
 .indt { margin-left: 32px }
 .pad, .notice, a.center-text.blk, .desc, #content, #sidebar, #footer, .error, .popup, code.blk, .comment, aside.rit { padding: 4px }
 .noborder, iframe { border: none }
 .scrl { overflow: auto }
 .scrlx { overflow-x: auto }
-.scrly, #sidebar { overflow-y: auto }
+.scrly { overflow-y: auto }
 .noscrl, .comment > :last-child, blockquote { overflow: hidden }
 .br, .desc, aside.rit { border-radius: 4px }
 .hglt, .desc, .comment, article { background: rgba(255, 255, 255, 0.4) }
@@ -495,7 +494,10 @@ html, body, #cont { height: 100% }
 }
 #cont > * { flex-shrink: 0 }
 #content { flex-grow: 1 }
-#sidebar { flex-shrink: 1 }
+#footer {
+	position: absolute;
+	width: 100%;
+}
 #nav {
 	padding: 0 2px 6px 2px;
 	font-size: 0;
@@ -704,7 +706,6 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 	#logo svg { padding-bottom: 4px }
 }
 @media (min-width: 800px) and (max-width: 1499px) {
-	#cont { margin: 0 auto }
 	#logo { height: 2rem }
 	#nav > :nth-child(-n+5) { float: left }
 	#nav > :nth-child(7) { border-left: 1px solid #444 }
@@ -721,21 +722,16 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 	#logo svg { width: 9.4rem }
 }
 @media (min-width: 1500px) {
-	html { background-size: cover }
-	#cont { overflow: hidden }
 	#content, #footer { margin-left: calc(4% + 150px) }
-	#content { margin-top: 6px }
 	#content:nth-child(2):nth-last-child(3) {
 		float: left;
 		width: calc(4px + 56%);
 	}
 	#sidebar {
 		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: calc(8px + 2em);
+		top: 0; right: 0; bottom: 0;
+		margin-top: 0;
 		width: calc(40% - 160px);
-		margin: 6px 0;
 		overflow-x: hidden;
 	}
 	#nav {
