--- a/http/a/main.css
+++ b/http/a/main.css
@@ -723,6 +723,7 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 }
 @media (min-width: 1500px) {
 	#content, #footer { margin-left: calc(4% + 150px) }
+	#footer { width: calc(96% - 150px) }
 	#content:nth-child(2):nth-last-child(3) {
 		float: left;
 		width: calc(4px + 56%);
