--- a/http/qa/question.css
+++ b/http/qa/question.css
@@ -9,7 +9,6 @@
 .err:empty { display: none }
 #answer-error { margin-left: 4em }
 .q-editing h1 { border-bottom: none }
-.answer { padding: 8px 0 4px }
 #q-content, .a-content {
 	border-left: 1px solid #aaa;
 	padding-left: 6px;
@@ -95,16 +94,14 @@ code.blk:empty { display: none }
 #answerta:focus + #answertips, #answertips:hover {
 	z-index: 1;
 	opacity: 1;
-	bottom: calc(100% + 12px);
-	left: 0;
-	transition: opacity 0.7s, bottom 0.7s;
+	transition: opacity 0.7s;
 }
 #answertips {
 	z-index: -1;
-	bottom: calc(100% - 240px);
+	bottom: 100%; left: 0;
 	background: #ffa;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 	border: 1px solid #888;
 	opacity: 0;
-	transition: opacity 0.3s ease-out, bottom 0.6s, left 0 0.6s;
+	transition: opacity 0.2s ease-out;
 }
