--- a/http/a/main.css
+++ b/http/a/main.css
@@ -37,7 +37,7 @@ body {
 [hidden], .target:not(:target), #content > .sctrls { display: none }
 .rel, .comment { position: relative }
 .abs, .ctrls { position: absolute }
-.fullwidth, input[type=text].fullwidth, input[type=password].fullwidth { width: 100% }
+.fullwidth, input[type=text].fullwidth, input[type=email].fullwidth, input[type=password].fullwidth { width: 100% }
 .maxwidth, img, input { max-width: 100% }
 .rit, .user, h1 small, h2 small, .c-sig { float: right }
 .lft, .row > :not(.rit):not(.sidebar):not(.half):not(.program), .user > * { float: left }
@@ -438,8 +438,8 @@ a.blk {
 }
 a.blk:hover, a.blk:active { background: rgba(255, 255, 255, 0.2) }
 a.blk:active { color: #00f }
-input[type=text], input[type=password] { width: 18em }
-input[type=text], input[type=number], input[type=search], input[type=password], textarea {
+input[type=text], input[type=email], input[type=password] { width: 18em }
+input[type=text], input[type=email], input[type=number], input[type=search], input[type=password], textarea {
 	font-family: helvetica;
 	font-size: 1rem;
 }
