--- a/http/a/clean.css
+++ b/http/a/clean.css
@@ -182,8 +182,24 @@ code .line.warning::before {
 .ta-cont[data-line="5"] textarea { width: calc(100% - 3.3rem - 5px) }
 .ta-cont[data-line="6"] textarea { width: calc(100% - 3.8rem - 5px) }
 .ta-cont[data-line="7"] textarea { width: calc(100% - 4.3rem - 5px) }
+code .universal, code .at-rule-name { color: #fc8 }
+code .element { color: #fb0 }
+code .class { color: #ff0 }
+code .id { color: #e80 }
+code .attribute-name { color: #baf }
+code .attribute-value { color: #afb }
+code .pseudo-class { color: #9ff }
+code .pseudo-element { color: #6fa }
+code .nth { color: #ffb }
+code .nth .n { color: #f55 }
+code .nth .number { color: #f88 }
+code .reference-combinator { color: #faa }
+code .property, code .logical, code .nth .n { font-style: italic }
+code .no-nest { color: #ddd }
+code .value { color: #aaf }
 code .inline-comment { color: #888 }
 code .keyword { color: #fd3 }
+code .reserved { color: #f00 }
 code .constant, code .string .escape { color: #df0 }
 code .string { color: #6C3 }
 code .regex { color: #ffa }
@@ -199,7 +215,7 @@ code .regex .charclass .punctuation, code .function-call { color: #f90 }
 code .regex .quantifier { color: #2af }
 code .regex .quantifier .punctuation { color: #8cf }
 code .regex .modifier, code .generator-star, code .newvar { font-weight: bold }
-code .operator, code .generator-star { color: #ff8 }
+code .operator, code .generator-star, code .colon { color: #ff8 }
 code .operator.assigns, code .equals { color: #8ff }
 code .argument, code .number { color: #3df }
 code .function-name { color: #f60 }
