Fix #283 with questions on home & better /qa/

--- a/http/a/clean.css
+++ b/http/a/clean.css
@@ -98,6 +98,14 @@ li {
 	display: inline-block;
 	width: 100%;
 }
+.answer-count {
+	display: inline-block;
+	font-style: normal;
+	padding: 3px;
+	background: #6bf;
+	border-radius: 4px;
+	color: #000;
+}
 .spoiler { transition: color 0.2s }
 .spoiler:not(:hover) { color: transparent }
 .spoiler:not(:hover) *, .spoiler:hover::before { opacity: 0 }
