--- a/http/a/main.css
+++ b/http/a/main.css
@@ -97,6 +97,20 @@ li {
 	display: inline-block;
 	width: 100%;
 }
+.answer-count {
+	display: inline-block;
+	font-style: normal;
+	padding: 3px;
+	background: #6bf;
+	border-radius: 4px;
+	color: #000;
+}
+.limited {
+	max-height: 64px;
+	overflow-x: hidden; overflow-y: auto;
+	transition: max-height 0.5s;
+}
+.limited:hover { max-height: 128px }
 .spoiler { transition: color 0.2s }
 .spoiler:not(:hover) { color: transparent }
 .spoiler:not(:hover) *, .spoiler:hover::before { opacity: 0 }
