--- a/http/a/main.css
+++ b/http/a/main.css
@@ -447,8 +447,8 @@ h3, h2.title, article h2, article article h1 {
 a, .ctrl {
 	color: #000;
 	transition: color 0.1s;
-	cursor: pointer;
 }
+a, .ctrl, .up, .dn, .fl { cursor: pointer }
 a:visited { color: #444 }
 a:hover, .ctrl:hover { color: #15f }
 a:active, .ctrl:active { color: #02d }
