--- a/http/learn/learn.css
+++ b/http/learn/learn.css
@@ -1,31 +1,26 @@
-#courses { max-width: 3200px }
+#courses {
+	display: flex;
+	flex-wrap: wrap;
+}
 #courses h2 { text-align: center }
 #courses > div {
 	background: rgba(16, 140, 255, 0.8);
 	transition: background 0.2s;
+	width: 400px;
+	max-width: 900px;
+	flex: 1 1 calc(15% + 230px);
+	margin: 3px;
+	display: flex;
+	flex-direction: column;
 }
+#courses .desc { flex-grow: 1 }
 #courses ul { margin: 0 }
-#courses > div:not(:first-child) { margin-top: 8px }
 #courses > div:hover { background: rgba(24, 160, 255, 0.8) }
 #courses a:hover { color: #333 }
 #courses a:active { color: #100 }
 #courses img {
 	border-radius: 4px;
 	display: block;
-}
-@media (min-width: 700px) {
-	#courses > div { width: calc(50% - 4px) }
-	#courses > div:nth-child(2) { margin-top: 0 }
-	#courses > div:nth-child(2n+1) { margin-right: 6px }
-}
-@media (min-width: 700px) and (max-width: 1800px) {
-	#courses > div:nth-child(-1n+2) > div { min-height: 6.4em }
-}
-@media (min-width: 1800px) {
-	#courses > div { width: calc(25% - 5px) }
-	#courses > div:nth-child(3) { margin-top: 0 }
-	#courses > div:not(:last-child) { margin-right: 6px }
-	#courses > div:last-child { margin-top: 0 }
 }
 #tree {
 	overflow-x: scroll;
