--- a/http/a/clean.css
+++ b/http/a/clean.css
@@ -518,6 +518,24 @@ input[type=text], input[type=number], input[type=search], input[type=password], 
 	line-height: 1.2;
 }
 .starcount[data-count="0"] { display: none }
+@media (max-width: 600px) {
+	body { font-size: 0.95em }
+}
+@media (max-width: 400px) {
+	body { font-size: 0.9em }
+}
+@media (min-width: 360px) {
+	line {
+		display: inline-block;
+		width: 1px; height: 1.2em;
+		background: #888;
+		vertical-align: sub;
+	}
+}
+@media (min-width: 480px) {
+	.resp-flex { display: flex }
+	.resp-flex > * { flex-grow: 1 }
+}
 html, body { height: 100% }
 body {
 	display: flex;
