--- a/http/chat/chat.css
+++ b/http/chat/chat.css
@@ -56,17 +56,14 @@ textarea {
 }
 #stars li { margin: 4px 0 }
 #editform { margin: 0 }
-#users a {
-	color: #000;
-	text-decoration: none;
-}
+#users a { text-decoration: none }
 #users li.inactive {
 	opacity: 0.3;
 	transition: opacity 60s, color 0.2s;
 }
 #users li { transition: color 0.2s }
-.writing, .writing a { color: green }
-#users a { font-weight: normal }
+.writing { color: green }
+#users a:visited:not(:hover) { color: #000 }
 #users:empty::after { content: 'No users in room' }
 #stars:empty::after { content: 'No multistarred messages' }
 .comment:not(:hover) .ctrls:not(:hover) { z-index: -1 }
@@ -107,4 +104,3 @@ textarea {
 	z-index: 1;
 }
 #chat { background: #ddd }
-#chat .comment { background: #eee }
