--- a/http/a/main.css
+++ b/http/a/main.css
@@ -40,23 +40,23 @@ body {
 .lft, .user > * { float: left }
 .rit, .user, h1 small, h2 small, .c-sig { float: right }
 .nofloat { float: none }
-.noumar, :not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(article):not(small):not(blockquote) > :first-child:not(span):not(textarea), .comment > :last-child, aside.rit:first-of-type { margin-top: 0 }
+.noumar, :not(h1):not(h2):not(h3):not(h4):not(h5):not(h6):not(article):not(small):not(blockquote) > :first-child:not(span):not(textarea), .comment > :last-child { margin-top: 0 }
 .mar { margin: 6px }
 .nomar, body, input, .comment .hover *, fieldset, textarea, .error * { margin: 0 }
 .tumar, form *, .comment > blockquote:nth-child(2), .comment > pre:nth-child(2) { margin-top: 2px }
 .sumar, :not(img) + .desc, .blk { margin-top: 4px }
 .umar, :not(.row):not(.flex):not(.resp-flex) > section:not(:first-child), article:not(:first-child), form:not([action="/search/"]), #footer, #sidebar { margin-top: 6px }
 .bumar, h1:not(:first-child), fieldset:not(:first-of-type) { margin-top: 8px }
-.bmar, .error, .half, aside.rit, #notifs li { margin-bottom: 6px }
+.bmar, .error, .half, #notifs li { margin-bottom: 6px }
 .lftpad, .user { margin-left: 6px }
 .indt { margin-left: 32px }
-.pad, .notice, a.center-text.blk, .desc, #content, #sidebar, #footer, .error, .popup, code.blk, .comment, aside.rit { padding: 4px }
+.pad, .notice, a.center-text.blk, .desc, #content, #sidebar, #footer, .error, .popup, code.blk, .comment { padding: 4px }
 .noborder, iframe { border: none }
 .scrl { overflow: auto }
 .scrlx { overflow-x: auto }
 .scrly { overflow-y: auto }
 .noscrl, .comment > :last-child, blockquote { overflow: hidden }
-.br, .desc, aside.rit { border-radius: 4px }
+.br, .desc { border-radius: 4px }
 .hglt, .desc, .comment, article { background: rgba(255, 255, 255, 0.4) }
 .shglt, #content, #sidebar, #footer { background: rgba(255, 255, 255, 0.8) }
 code, iframe:not([seamless]) { background: #fff }
@@ -582,7 +582,6 @@ body > * { flex-shrink: 0 }
 		vertical-align: sub;
 	}
 }
-aside.rit { background: rgba(255, 255, 100, 0.5) }
 @media (min-width: 480px) {
 	.resp-flex { display: flex }
 	.resp-flex > * { flex-grow: 1 }
@@ -598,10 +597,6 @@ aside.rit { background: rgba(255, 255, 100, 0.5) }
 	.half { float: left }
 	.half.rit, .half:not(.rit) + .half:last-child { float: right }
 	.half { width: 49.5% }
-	aside.rit {
-		width: calc(10% + 300px);
-		margin-left: 6px;
-	}
 }
 #nav {
 	background: #000;
